fix overflow add logo

--- a/src/app/add-items/add-items.component.css
+++ b/src/app/add-items/add-items.component.css
@@ -8,6 +8,7 @@
     top: 50px;
     max-width: 600px;
     padding: 20px;
+    margin-bottom: 70px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
